<resources>
    <string name="app_name">TI Battle Calculator</string>
    <string name="scan_battle">Scan!</string>
    <string name="scan_screen_camerax_coming_soon">Scan screen (CameraX coming soon)</string>
    <string name="ship_type">Ship type</string>
    <string name="decrease_ship_quantity">–</string>
    <string name="_0">0</string>
    <string name="increase_ship_quantity">+</string>
    <string name="adjust_detected_fleets">Adjust detected fleets</string>
    <string name="player_1">Player 1</string>
    <string name="faction">Faction</string>
    <string name="ships">Ships</string>
    <string name="player_2">Player 2</string>
    <string name="calculate_battle">Calculate battle</string>
    <string name="select">Select faction</string>
    <string name="twilight_imperium_battle_calculator">TI Battle Calculator</string>
    <string name="point_camera_at_the_battle">Point camera at the battle and take a 1 second video.</string>
    <string name="start_scan">Start scan</string>
    <string name="resource_usage">Resource Usage</string>
    <string name="settings">Settings</string>
    <string name="scan_battle_subtitle">Pax Magnifica Bellum Gloriosum!</string>
    <string name="version_1">Version 1.22 // 1.12.2025</string>
    <string name="home">Home</string>
    <string name="detection_sample">Your Detection Sample</string>
    <string name="upg">Upg.</string>
    <string-array name="ti_factions">
        <item>Arborec</item>
        <item>Barony of Letnev</item>
        <item>Clan of Saar</item>
        <item>Emirates of Hacan</item>
        <item>Federation of Sol</item>
        <item>Ghosts of Creuss</item>
        <item>L1Z1X Mindnet</item>
        <item>Mentak Coalition</item>
        <item>Naalu Collective</item>
        <item>Nekro Virus</item>
        <item>Sardakk N\'orr</item>
        <item>Universities of Jol-Nar</item>
        <item>Winnu</item>
        <item>Xxcha Kingdom</item>
        <item>Yin Brotherhood</item>
        <item>Yssaril Tribes</item>
    </string-array>

</resources>